<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.sfaci.agenda.Registro">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_guardar"
        android:id="@+id/btGuardar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_cancelar"
        android:id="@+id/btCancelar"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btGuardar"
        android:layout_marginStart="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombreApellidos"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/lb_nombre_apellidos" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_below="@+id/etNombreApellidos"
        android:layout_alignParentStart="true"
        android:hint="@string/lb_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etTelefonoFijo"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentStart="true"
        android:hint="@string/lb_telefono_fijo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/etTelefonoMovil"
        android:layout_below="@+id/etTelefonoFijo"
        android:layout_alignParentStart="true"
        android:hint="@string/lb_telefono_movil" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etFechaNacimiento"
        android:layout_below="@+id/etTelefonoMovil"
        android:layout_alignParentStart="true"
        android:hint="@string/lb_fecha_nacimiento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etDeudas"
        android:layout_below="@+id/etFechaNacimiento"
        android:layout_alignParentStart="true"
        android:hint="@string/lb_deudas" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibFoto"
        android:layout_alignTop="@+id/etNombreApellidos"
        android:layout_above="@+id/etTelefonoMovil"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btCancelar"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_add" />
</RelativeLayout>
